settings,category crud

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,8 +43,8 @@
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">Category</a>
                     <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="{{ url('category_list') }}">List Category</a>
-                        <a class="dropdown-item" href="{{ url('category_create') }}">Add Category</a>
+                        <a class="dropdown-item" href="{{ url('category_index') }}">List Category</a>
+                        <a class="dropdown-item" href="{{ url('category_new') }}">Add Category</a>
                     </div>
                 </li>
 
@@ -76,10 +76,10 @@
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle " id="navbarDropdownMenuLink" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">Shop Settings</a>
+                       aria-haspopup="true" aria-expanded="false">Settings</a>
                     <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="{{ url('settings_list') }}">Shop</a>
-                        <a class="dropdown-item" href="{{ url('settings_create') }}">Add Shop</a>
+                        <a class="dropdown-item" href="{{ url('settings_index') }}">Settings</a>
+                        <a class="dropdown-item" href="{{ url('settings_new') }}">Add Settings</a>
                     </div>
                 </li>
 
