--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -11,7 +11,7 @@
                     <div class="col-md-6 mx-auto">
                         <div class="card border-secondary">
                             <div class="card-header">
-                                <h3 class="mb-0 my-2"> Update Category</h3>
+                                <h3 class="mb-0 my-2"> New Category</h3>
                             </div>
                             <div class="card-body">
 
