--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,8 +52,8 @@
                     <a class="nav-link dropdown-toggle " id="navbarDropdownMenuLink" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">Product</a>
                     <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="{{ url('product_list') }}">List Product</a>
-                        <a class="dropdown-item" href="{{ url('product_create') }}">Add Product</a>
+                        <a class="dropdown-item" href="{{ url('product_index') }}">List Product</a>
+                        <a class="dropdown-item" href="{{ url('product_new') }}">Add Product</a>
                     </div>
                 </li>
 
