--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,42 +1,44 @@
 {% extends 'base.html.twig' %}
-{% block title %} Product List {% endblock %}
+
+{% block title %}Product index{% endblock %}
 
 {% block body %}
+<div class="row">
+    <div class="container">
+        <div class="col-md-12 mt-5">
+            <a href="{{ path('product_new') }}" class="btn btn-info mb-3">Create new</a>
+            <table class="table table-bordered center">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Category</th>
+                <th>Price</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for product in products %}
+            <tr>
+                <td>{{ product.id }}</td>
+                <td>{{ product.name }}</td>
+                <td>{{ product.category }}</td>
+                <td>{{ product.price }} TK.</td>
+                <td>
+                    <a href="{{ path('product_show', {'id': product.id}) }}" class="btn btn-info">show</a>
+                    <a href="{{ path('product_edit', {'id': product.id}) }}" class="btn btn-primary">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="4">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    <div class="row">
-        <div class="container">
-            <div class="col-md-12 mt-5">
-                <table class="table table-bordered">
-                    <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Category</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Action</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>Otto</td>
-                        <td>
-
-                            <a href="{{ url('product_edit') }}" style="color: blue">  <i class="fa fa-edit"></i> </a> /
-                            <a href="" style="color: red" onclick="return confirm('Are you sure you want to delete this item?');"> <i class="fa fa-trash"></i> </a>
-                        </td>
-                    </tr>
-
-                    </tbody>
-                </table>
-
-            </div>
         </div>
     </div>
+</div>
 
 {% endblock %}
-
-{% block javascripts %} {% endblock %}
