--- a/templates/product/new.html.twig
+++ b/templates/product/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Product{% endblock %}
+{% block title %}New Product{% endblock %}
 
 {% block body %}
 <div class="container py-5">
@@ -10,11 +10,11 @@
                 <div class="col-md-6 mx-auto">
                     <div class="card border-secondary">
                         <div class="card-header">
-                            <h3 class="mb-0 my-2"> Update Product</h3>
+                            <h3 class="mb-0 my-2"> New Product</h3>
                         </div>
                         <div class="card-body">
 
-                            {{ include('product/_form.html.twig', {'button_label': 'Update'}) }}
+                            {{ include('product/_form.html.twig') }}
 
                             <a href="{{ path('product_index') }}" class="btn btn-info mt-3">Back to list</a>
 
