--- a/templates/settings/index.html.twig
+++ b/templates/settings/index.html.twig
@@ -38,11 +38,7 @@
 
 
                     <div style="width:33%; float:right;">
-                        <form method="post" action="{{ path('settings_delete', {'id': setting.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-                            <input type="hidden" name="_method" value="DELETE">
-                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ setting.id) }}">
-                            <button class="btn btn-danger">Delete</button>
-                        </form>
+                        {{ include('settings/_delete_form.html.twig') }}
 
                     </div>
                 </td>
