--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -6,13 +6,14 @@
 <div class="row">
     <div class="container">
         <div class="col-md-12 mt-5">
-            <a href="{{ path('category_new') }}" class="btn btn-info mb-3">Create new</a>
-    <table class="table table-bordered center">
+            <a href="{{ path('category_new') }}" class="btn btn-danger mb-3">Create new</a>
+    <table class="table  center" >
         <thead>
             <tr class="float-center">
                 <th>Id</th>
                 <th>Name</th>
                 <th>Action</th>
+                <th>SubCategory</th>
 
             </tr>
         </thead>
@@ -23,21 +24,12 @@
                 <td>{{ category.name }}</td>
 
                 <td>
-                    <div style="width:33%;float:left;" >
-                        <a href="{{ path('category_show', {'id': category.id}) }}" class="btn btn-info">show</a>
+                    <a href="{{ path('category_show', {'id': category.id}) }}" class="btn btn-info"><i class="fa fa-eye"></i></a>
+                    <a href="{{ path('category_edit', {'id': category.id}) }}" class="btn btn-primary"><i class="fa fa-edit"></i></a>
 
-                    </div>
-
-                    <div style="width:33%; float:right;">
-                        <a href="{{ path('category_edit', {'id': category.id}) }}" class="btn btn-primary">edit</a>
-
-                    </div>
-
-
-                    <div style="width:33%; float:right;">
-                        {{ include('category/_delete_form.html.twig') }}
-
-                    </div>
+                </td>
+                <td>
+                    <a href="{{ path('category_new',{'parentId': category.id}) }}" class="btn btn-success mb-3"><i class="fa fa-plus"></i></a>
                 </td>
 
 
