--- a/templates/sales/report.html.twig
+++ b/templates/sales/report.html.twig
@@ -23,7 +23,7 @@
                                 <input type="date" class="form-control" id="inputName">
                             </div>
                             <div class="ml-5">
-                                <input id="calculate" type="submit" class="btn btn-info" value="View Report" />
+                                <input id="calculate" type="submit" class="btn btn-danger" value="View Report" />
                             </div>
                         </div>
 
@@ -55,15 +55,15 @@
 
                     <tr>
                         <td></td>
-                        <td class="float-right">Total:</td>
-                        <td class="bg-info">200</td>
-                        <td class="bg-info">100</td>
-                        <td class="bg-info">300</td>
+                        <td class="float-right bg-danger" style="color: white">Total:</td>
+                        <td>200</td>
+                        <td>100</td>
+                        <td>300</td>
                     </tr>
 
                     </tbody>
                 </table>
-                <button type="submit" class="btn btn-info btn-lg float-right"><i class="fa fa-print"></i> Print</button>
+                <button type="submit" class="btn btn-danger float-right"><i class="fa fa-print"></i> Print</button>
             </div>
         </div>
     </div>
