--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -20,7 +20,10 @@
         </tbody>
     </table>
         </div>
-        <a href="{{ path('category_index') }}" class="btn btn-info ml-3">back to list</a>
+        <a href="{{ path('category_index') }}" class="btn btn-danger ml-3">Back</a>
+        <div class="mt-3 ml-3">
+            {{ include('category/_delete_form.html.twig') }}
+        </div>
     </div>
 
 </div>
