--- a/templates/customer/new.html.twig
+++ b/templates/customer/new.html.twig
@@ -1,23 +1,19 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}New Settings{% endblock %}
+{% block title %}Create Customer {% endblock %}
 
 {% block body %}
-
     <div class="container py-5">
+
         <div class="row">
             <div class="col-md-12">
                 <div class="row">
                     <div class="col-md-6 mx-auto">
                         <div class="card border-secondary">
                             <div class="card-header">
-                                <h3 class="mb-0 my-2">Update</h3>
+                                <h3 class="mb-0 my-2">Create Customer</h3>
                             </div>
                             <div class="card-body">
-
-                                {{ include('settings/_form.html.twig', {'button_label': 'Update'}) }}
-
-                                <a href="{{ path('settings_index') }}" class="btn btn-danger mt-3">Back</a>
+                                {{ form(form, {'attr': {'novalidate': 'novalidate'}}) }}
                             </div>
                         </div>
                     </div>
@@ -25,4 +21,6 @@
             </div>
         </div>
     </div>
+
 {% endblock %}
+{% block javascripts %} {% endblock %}
