--- a/templates/customer/report.html.twig
+++ b/templates/customer/report.html.twig
@@ -29,7 +29,7 @@
 
                     </tbody>
                 </table>
-                <button type="submit" class="btn btn-info btn-lg float-right"><i class="fa fa-print"></i> Print</button>
+                <button type="submit" class="btn btn-danger float-right"><i class="fa fa-print"></i> Print</button>
             </div>
         </div>
     </div>
