--- a/templates/customer/show.html.twig
+++ b/templates/customer/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Settings{% endblock %}
+{% block title %}Customer{% endblock %}
 
 {% block body %}
 <div class="container py-5">
@@ -15,25 +15,35 @@
                                 <tbody>
                                     <tr>
                                         <th>Id</th>
-                                        <td>{{ setting.id }}</td>
+                                        <td>{{ customer.id }}</td>
                                     </tr>
                                     <tr>
                                         <th>Name</th>
-                                        <td>{{ setting.name }}</td>
+                                        <td>{{ customer.name }}</td>
                                     </tr>
                                     <tr>
-                                        <th>Value</th>
-                                        <td>{{ setting.value }}</td>
+                                        <th>Email</th>
+                                        <td>{{ customer.email }}</td>
                                     </tr>
                                     <tr>
-                                        <th>Active</th>
-                                        <td>{{ setting.active ? 'Yes' : 'No' }}</td>
+                                        <th>Address</th>
+                                        <td>{{ customer.address }}</td>
+                                    </tr>
+
+                                    <tr>
+                                        <th>City</th>
+                                        <td>{{ customer.city }}</td>
+                                    </tr>
+
+                                    <tr>
+                                        <th>Contact No.</th>
+                                        <td>{{ customer.contact }}</td>
                                     </tr>
                                 </tbody>
 
                             </table>
-                            <a href="{{ path('settings_index') }}" class="btn btn-danger mb-3">Back</a>
-                            {{ include('settings/_delete_form.html.twig') }}
+                            <a href="{{ path('customer_list') }}" class="btn btn-danger">Back</a>
+
 
                         </div>
                     </div>
