--- a/templates/product/edit.html.twig
+++ b/templates/product/edit.html.twig
@@ -16,7 +16,7 @@
 
                             {{ include('product/_form.html.twig', {'button_label': 'Update'}) }}
 
-                            <a href="{{ path('product_index') }}" class="btn btn-info mt-3">Back to list</a>
+                            <a href="{{ path('product_index') }}" class="btn btn-danger mt-3">Back</a>
 
                         </div>
                     </div>
