--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="container">
         <div class="col-md-12 mt-5">
-            <a href="{{ path('product_new') }}" class="btn btn-info mb-3">Create new</a>
+            <a href="{{ path('product_new') }}" class="btn btn-danger mb-3">Create new</a>
             <table class="table table-bordered center">
         <thead>
             <tr>
@@ -25,8 +25,8 @@
                 <td>{{ product.category }}</td>
                 <td>{{ product.price }} TK.</td>
                 <td>
-                    <a href="{{ path('product_show', {'id': product.id}) }}" class="btn btn-info">show</a>
-                    <a href="{{ path('product_edit', {'id': product.id}) }}" class="btn btn-primary">edit</a>
+                    <a href="{{ path('product_show', {'id': product.id}) }}" class="btn btn-info"><i class="fa fa-eye"></i></a>
+                    <a href="{{ path('product_edit', {'id': product.id}) }}" class="btn btn-primary"><i class="fa fa-edit"></i></a>
                 </td>
             </tr>
         {% else %}
