--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -28,7 +28,7 @@
             </tr>
         </tbody>
     </table>
-        <a href="{{ path('product_index') }}" class="btn btn-info">Back to list</a>
+        <a href="{{ path('product_index') }}" class="btn btn-danger">Back</a>
         <div class="mt-3">
             {{ include('product/_delete_form.html.twig') }}
         </div>
