--- a/templates/settings/index.html.twig
+++ b/templates/settings/index.html.twig
@@ -3,57 +3,50 @@
 {% block title %}Settings index{% endblock %}
 
 {% block body %}
-<div class="row">
-    <div class="container">
-        <div class="col-md-12 mt-5">
-            <a href="{{ path('settings_new') }}" class="btn btn-info mb-3"> Create new</a>
-      <table class="table table-bordered center">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Value</th>
-                <th>Active</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for setting in settings %}
-            <tr>
-                <td>{{ setting.id }}</td>
-                <td>{{ setting.name }}</td>
-                <td>{{ setting.value }}</td>
-                <td>{{ setting.active ? 'Yes' : 'No' }}</td>
+    <div class="row">
+        <div class="container">
+            <div class="col-md-12 mt-5">
+                <a href="{{ path('settings_new') }}" class="btn btn-danger mb-3"> Create new</a>
+                <table class="table table-bordered center">
+                    <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Name</th>
+                        <th>Value</th>
+                        <th>Active</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for setting in settings %}
+                        <tr>
+                            <td>{{ setting.id }}</td>
+                            <td>{{ setting.name }}</td>
+                            <td>{{ setting.value }}</td>
+                            <td>{{ setting.active ? 'Yes' : 'No' }}</td>
 
-                <td>
-                    <div style="width:33%;float:left;" >
-                        <a href="{{ path('settings_show', {'id': setting.id}) }}" class="btn btn-info">view</a>
+                            <td>
 
-                    </div>
-                    <div style="width:33%; float:right;">
-                        <a href="{{ path('settings_edit', {'id': setting.id}) }}" class="btn btn-primary">edit</a>
+                                <a href="{{ path('settings_show', {'id': setting.id}) }}" class="btn btn-info"><i
+                                            class="fa fa-eye"></i></a>
 
 
-                    </div>
+                                <a href="{{ path('settings_edit', {'id': setting.id}) }}" class="btn btn-primary"><i
+                                            class="fa fa-edit"></i></a>
 
+                            </td>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td colspan="5">no records found</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
 
-                    <div style="width:33%; float:right;">
-                        {{ include('settings/_delete_form.html.twig') }}
-
-                    </div>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
         </div>
 
     </div>
-
-</div>
 
 {% endblock %}
