--- a/templates/settings/new.html.twig
+++ b/templates/settings/new.html.twig
@@ -15,15 +15,8 @@
                         </div>
                         <div class="card-body">
 
-                            {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
-                            {{ form_widget(form) }}
+                            {{ include('settings/_form.html.twig') }}
 
-
-                            <button class="btn btn-success">{{ button_label|default('Save') }}</button>
-
-                            {{ form_end(form) }}
-
-                         <a href="{{ path('settings_index') }}" class="btn btn-info mt-3">Back To List</a>
                         </div>
                     </div>
                 </div>
