--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -35,7 +35,7 @@
                                     </div>
                                         <div class="form-group">
                                             {# <button type="submit" class="btn btn-success btn-lg float-right">Add</button>#}
-                                            <a href="{{ url('user_list') }} " class="btn btn-success btn-lg float-right" type="submit">Update</a>
+                                            <a href="{{ url('user_list') }} " class="btn btn-danger btn-lg float-right" type="submit">Update</a>
                                         </div>
                                 </form>
                             </div>
