--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -23,8 +23,9 @@
                         <td>Otto</td>
                         <td>
 
-                            <a href="{{ url('user_edit') }}" style="color: blue">  <i class="fa fa-edit"></i> </a> /
-                            <a href="" style="color: red" onclick="return confirm('Are you sure you want to delete this item?');"> <i class="fa fa-trash"></i> </a>
+                            <a href="{{ url('user_edit') }}" class="btn btn-info">  <i class="fa fa-eye"></i> </a>
+                            <a href="{{ url('user_edit') }}" class="btn btn-primary">  <i class="fa fa-edit"></i> </a>
+                            <a href="" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this item?');"> <i class="fa fa-trash"></i> </a>
                         </td>
                     </tr>
 
