--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="container">
         <div class="col-md-12 mt-5">
-            <a href="{{ path('category_new') }}" class="btn btn-danger mb-3">Create new</a>
+            <a href="{{ path('category_new') }}" class="btn btn-danger mb-3"><i class="fa fa-plus"> New</i></a>
     <table class="table  center" >
         <thead>
             <tr class="float-center">
