--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -6,7 +6,8 @@
     <div class="row">
         <div class="container">
             <div class="col-md-12 mt-5">
-                <a href="{{ path('customer_create') }}" class="btn btn-danger mb-3">Create new</a>
+                <a href="{{ path('customer_create') }}" class="btn btn-danger mb-3"><i class="fa fa-plus"> New</i></a>
+                <a href="{{ path('customer_create') }}" class="btn btn-danger mb-3 float-right"><i class="fa fa-print"> Print</i></a>
                 <table class="table table-bordered center">
                     <thead>
                     <tr>
