--- a/templates/invoice/create.html.twig
+++ b/templates/invoice/create.html.twig
@@ -5,183 +5,178 @@
 
     <div class="container py-5">
         <div class="row">
-                    <div class="col-md-6">
-                        <div class="card border-secondary">
-                            <div class="card-header">
-                                <h3 class="mb-0 my-2">Create Invoice</h3>
+            <div class="col-md-6">
+                <div class="card border-secondary">
+                    <div class="card-header">
+                        <h6 class=" my-2 center">Invoice</h6>
+                    </div>
+                    <div class="card-body">
+
+                        {{ form_start(form) }}
+                        {{ form_row(form.billNumber) }}
+                        {{ form_row(form.billDate) }}
+                        {{ form_row(form.customer) }}
+
+                        {{ form_row(form.subtotal) }}
+                        <div class="form-group">
+
+                            <div class="row">
+
+                                <div class="col-md-5">
+                                    {{ form_label(form.vat) }}
+                                    <input type="text" class="form-control" id="inputName">
+                                </div>
+                                <div class="col-md-1 mt-4">%</div>
+                                <div class="col-md-5 mt-4">
+
+                                    {{ form_widget(form.vat) }}
+
+                                </div>
+
                             </div>
-                            <div class="card-body">
-                                <form class="form" role="form" autocomplete="off">
-                                    <div class="form-group">
-                                        <label for="inputName">Bill No.</label>
-                                        <input type="text" class="form-control" id="inputName" placeholder="Bill No.">
-                                    </div>
 
-                                    <div class="form-group">
-                                        <label for="inputPassword3">Bill Date</label>
-                                        <input type="date" class="form-control" id="inputPassword3" placeholder="password" required="">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="inputVerify3">User Type</label>
-                                        <div class="input-group mb-3">
-                                            <select class="custom-select" id="inputGroupSelect02">
-                                                <option selected>Choose...</option>
-                                                <option value="1">Admin</option>
-                                                <option value="2">Staff</option>
-                                                <option value="3">Manager</option>
-                                            </select>
-                                        </div>
-                                    </div>
-
-                                        <div class="form-group">
-                                            <label for="inputName">Product Name</label>
-                                            <div class="input-group mb-3">
-                                                <select class="custom-select" id="inputGroupSelect02">
-                                                    <option selected>Choose...</option>
-                                                    <option value="1">Product One</option>
-                                                    <option value="2">Product Two</option>
-                                                    <option value="3">Product Three</option>
-                                                </select>
-                                            </div>
-                                        </div>
-
-                                        <div class="form-group">
-                                            <label for="inputName">Unit Price</label>
-                                            <input type="text" class="form-control" id="inputName" placeholder="Unit Price">
-                                        </div>
-
-                                        <div class="form-group">
-                                            <label for="inputName">Quantity</label>
-                                            <input type="text" class="form-control" id="inputName" placeholder="Quantity">
-                                        </div>
-
-                                        <div class="form-group">
-                                            <label for="inputName">Total Amount</label>
-                                            <input type="text" class="form-control" id="inputName" placeholder="Total Amount">
-                                        </div>
-
-                                        <div class="form-group">
-                                            <button type="submit" class="btn btn-success btn-lg float-right">Add</button>
-                                        </div>
-
-
-                                     <div class="row pt-5">
-                                         <table class="table table-bordered">
-                                             <thead>
-                                             <tr>
-                                                 <th scope="col">#</th>
-                                                 <th scope="col">P.Name</th>
-                                                 <th scope="col">U.Price</th>
-                                                 <th scope="col">Qty.</th>
-                                                 <th scope="col">T.Amount</th>
-                                                 <th scope="col">Remove</th>
-                                             </tr>
-                                             </thead>
-                                             <tbody>
-
-                                             <tr>
-                                                 <th scope="row">1</th>
-                                                 <td>Mark</td>
-                                                 <td>Otto</td>
-                                                 <td>Otto</td>
-                                                 <td>Otto</td>
-                                                 <td>
-                                                     <a href="" style="color: red" onclick="return confirm('Are you sure you want to delete this item?');"> <i class="fa fa-trash ml-4"></i> </a>
-                                                 </td>
-                                             </tr>
-
-                                             </tbody>
-                                         </table>
-                                     </div>
-
-
-                                </form>
-                            </div>
-                        </div>
                         </div>
 
+                        <div class="form-group">
+                            <div class="row">
 
+                                <div class="col-md-5">
+                                    {{ form_label(form.discount) }}
+                                    <input type="text" class="form-control" id="inputName">
+                                </div>
+                                <div class="col-md-1 mt-4">%</div>
+                                <div class="col-md-5 mt-4">
+                                    {{ form_widget(form.discount) }}
+                                </div>
 
+                            </div>
 
-        <div class="col-md-6">
-            <div class="card border-secondary">
-                <div class="card-header">
-                    <h3 class="mb-0 my-2"></h3>
+                        </div>
+
+                    </div>
                 </div>
-                <div class="card-body">
-                    <form class="form" role="form" autocomplete="off">
+            </div>
+
+
+            <div class="col-md-6">
+                <div class="card border-secondary">
+                    <div class="card-header">
+                        <h6 class=" my-2 center">Invoice</h6>
+                    </div>
+                    <div class="card-body">
+
+
+
+
+
+
+                        {{ form_row(form.remarks) }}
+
                         <div class="form-group">
-                            <label for="inputName">Remarks</label>
-                            <input type="text" class="form-control" id="inputName" placeholder="Remarks">
+                            <label for="inputName">Cash</label>
+                            <input type="text" class="form-control" id="inputName">
                         </div>
 
-
-                            <div class="form-group">
-                                <label for="inputName">Sub Total</label>
-                                <input type="text" class="form-control" id="inputName" placeholder="Sub Total">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="inputName">Vat</label>
-                                <div class="row ml-2">
-
-                                      <div class="col-xs-2">
-                                          <input type="text" class="form-control" id="inputName" >
-                                      </div>
-                                     <div class="col-xs-1 ml-1">%</div>
-                                      <div class="col-xs-2 ml-4">
-                                          <input type="text" class="form-control" id="inputName">
-                                      </div>
-
-                                </div>
-
-                            </div>
-
                         <div class="form-group">
-                                <label for="inputName">Discount</label>
-                                <div class="row ml-2">
-
-                                      <div class="col-xs-2">
-                                          <input type="text" class="form-control" id="inputName" >
-                                      </div>
-                                     <div class="col-xs-1 ml-1">%</div>
-                                      <div class="col-xs-2 ml-4">
-                                          <input type="text" class="form-control" id="inputName">
-                                      </div>
-
-                                </div>
-
-                            </div>
-
-                            <div class="form-group">
-                                <label for="inputName">Cash</label>
-                                <input type="text" class="form-control" id="inputName">
-                            </div>
-
-                        <div class="form-group">
-                                <label for="inputName">Change</label>
-                                <input type="text" class="form-control" id="inputName">
-                            </div>
+                            <label for="inputName">Change</label>
+                            <input type="text" class="form-control" id="inputName">
+                        </div>
                         <div class="row ml-2">
                             <div class="col-xs-3">
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-success btn-lg float-right">Submit</button>
+
+                                    {{ form_row(form.Submit) }}
 
                                 </div>
                             </div>
                             <div class="col-xs-3  ml-3">
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-primary btn-lg float-right"><i class="fa fa-print"></i> Print</button>
+                                    <button type="submit" class="btn btn-danger float-right"><i
+                                                class="fa fa-print"></i> Print
+                                    </button>
 
                                 </div>
                             </div>
 
 
                         </div>
-                    </form>
+                        {{ form_end(form) }}
+                    </div>
                 </div>
             </div>
-        </div>
+
+
+            <div class="col-md-6 mt-3">
+                <div class="card border-secondary">
+                    <div class="card-header">
+                        <h6 class=" my-2 center">Product Info</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="form-group">
+                            <label for="inputName">Product Name</label>
+                            <div class="input-group mb-3">
+                                <select class="custom-select" name="" id="inputGroupSelect02">
+                                    <option selected>Choose...</option>
+                                    {% for product in products %}
+                                        <option value="1">{{ product.name }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputName">Unit Price</label>
+                            <input type="text" class="form-control" id="inputName" placeholder="Unit Price">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputName">Quantity</label>
+                            <input type="text" class="form-control" id="inputName" placeholder="Quantity">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputName">Total Amount</label>
+                            <input type="text" class="form-control" id="inputName" placeholder="Total Amount">
+                        </div>
+
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-success float-right">Add</button>
+                        </div>
+
+
+                        <div class="row pt-5">
+                            <table class="table table-bordered ml-5">
+                                <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">P.Name</th>
+                                    <th scope="col">U.Price</th>
+                                    <th scope="col">Qty.</th>
+                                    <th scope="col">T.Amount</th>
+                                    <th scope="col">Action</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>Otto</td>
+                                    <td>Otto</td>
+                                    <td>
+                                        <a href="" style="color: red"
+                                           onclick="return confirm('Are you sure you want to delete this item?');">
+                                            <i class="fa fa-trash ml-4"></i> </a>
+                                    </td>
+                                </tr>
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -189,4 +184,5 @@
 
 
 {% endblock %}
-{% block javascripts %} {% endblock %}
+{% block javascripts %}
+{% endblock %}
