invoice update, sales report

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -74,7 +74,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link btn btn-danger" href="{{ url('sales_report') }}">Sales Report</a>
+                <a class="nav-link btn btn-danger" href="{{ url('get_sales_report') }}">Sales Report</a>
             </li>
 
             <li class="nav-item dropdown">
