--- a/templates/admin/login.html.twig
+++ b/templates/admin/login.html.twig
@@ -8,7 +8,7 @@
 </head>
 <body background="{{ asset('image/sakura.png') }}" >
 {% block body %}
-    <div class="container col-md-6 mt-5 bg-primary">
+    <div class="container col-lg-6 col-md-6 mt-5 bg-primary">
         <!-- Default form login -->
         <form class="text-center  p-5" action="#">
 
