--- a/templates/invoice/edit.html.twig
+++ b/templates/invoice/edit.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %} Create Invoice {% endblock %}
+{% block title %} Invoice {% endblock %}
 
 {% block body %}
     <div class="container mt-5">
