--- a/templates/invoice/form_prototype.html.twig
+++ b/templates/invoice/form_prototype.html.twig
@@ -1,12 +1,5 @@
-
 <td> {{ form_widget(form.product) }}</td>
-
-<td class="price"> </td>
+<td class="price">{{ detail is defined ? detail.unitprice :  '' }}</td>
 <td>{{ form_widget(form.quantity) }}</td>
-
-<td class="total" data-val=""></td>
-
-<td>
-
-    <input type="button" class="btn btn-danger remove-item" value="x" />
-</td>
+<td class="total" data-val="{{ detail is defined ? detail.unitprice * detail.quantity:  '' }}">{{ detail is defined ? detail.unitprice * detail.quantity:  '' }}</td>
+<td><input type="button" class="btn btn-danger remove-item" value="x"/></td>
