--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -7,7 +7,8 @@
     <div class="container">
         <div class="col-md-12 mt-5">
             <a href="{{ path('product_new') }}" class="btn btn-danger mb-3"><i class="fa fa-plus"> New</i></a>
-            <table class="table table-bordered center">
+            <a href="#" class="btn btn-danger mb-3 float-right" id="printInvoice"><i class="fa fa-print"> Print</i></a>
+         <table class="table table-bordered center">
         <thead>
             <tr>
                 <th>Id</th>
@@ -41,4 +42,18 @@
     </div>
 </div>
 
+{% endblock %}
+{% block javascripts %}
+    <script>
+        $('#printInvoice').click(function(){
+            Popup($('.invoice'));
+
+            function Popup()
+            {
+                window.print();
+
+
+            }
+        });
+    </script>
 {% endblock %}
