--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,6 +15,15 @@
                                         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                                     {% endif %}
 
+                                        {% for type, messages in app.session.flashbag.all() %}
+                                            {% for message in messages %}
+                                                <div class="alert alert-{{ type }} alert-dismissible" role="alert">
+                                                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                    {{ message | raw }}
+                                                </div>
+                                            {% endfor %}
+                                        {% endfor %}
+
                                     {% if app.user %}
                                         <div class="mb-3">
                                             You are logged in as {{ app.user.username }}, <a
