--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -8,7 +8,7 @@
         <div class="col-md-12 mt-5">
             <a href="{{ path('product_new') }}" class="btn btn-danger mb-3"><i class="fa fa-plus"> New</i></a>
             <a href="#" class="btn btn-danger mb-3 float-right" id="printInvoice"><i class="fa fa-print"> Print</i></a>
-         <table class="table table-bordered center">
+         <table class="table table-bordered center" id="product">
         <thead>
             <tr>
                 <th>Id</th>
@@ -55,5 +55,10 @@
 
             }
         });
+    </script>
+    <script>
+        $(document).ready( function () {
+            $('#product').DataTable();
+        } );
     </script>
 {% endblock %}
